--- a/rca/project_styleguide/templates/patterns/organisms/footer/footer.html
+++ b/rca/project_styleguide/templates/patterns/organisms/footer/footer.html
@@ -1,38 +1,81 @@
 {% load static wagtailcore_tags navigation_tags %}
 
-<footer class="footer">
-    <div class="footer__inner wrapper wrapper--large">
-        <div class="footer__nav-container">
-            {% if settings.utils.SocialMediaSettings.twitter_handle or settings.utils.SocialMediaSettings.facebook_app_id %}
-                <section class="footer__social-links">
-                    <h5 class="footer__heading">Follow us:</h5>
-                    {% if settings.utils.SocialMediaSettings.twitter_handle %}
-                        <a href="https://twitter.com/{{ settings.utils.SocialMediaSettings.twitter_handle }}">
-                            <svg class="icon icon--footer-social"><use xlink:href="#twitter"></use></svg>
-                        </a>
-                    {% endif %}
-                    {% if settings.utils.SocialMediaSettings.facebook_app_id %}
-                        <a href="https://www.facebook.com/{{ settings.utils.SocialMediaSettings.facebook_app_id }}">
-                            <svg class="icon icon--footer-social"><use xlink:href="#facebook"></use></svg>
-                        </a>
-                    {% endif %}
-                </section>
-            {% endif %}
+<div class="footer">
 
-            <section>
-                {% footernav %}
-            </section>
+    <div class="footer__container">
 
-            <section>
+        <div class="footer__upper grid">
+
+            <div class="footer__logo">
+                {% include 'patterns/atoms/logo/logo.html' %}
+            </div>
+
+            <div class="footer__action">
+                {% include 'patterns/atoms/audience-nav-item/audience-nav-item.html' %}
+            </div>
+
+        </div>
+
+        {# if settings.utils.SocialMediaSettings.twitter_handle or settings.utils.SocialMediaSettings.facebook_app_id #}
+            <div class="footer__mid grid">
+                <ul class="footer__social-links">
+                    <li class="social-item social-item--twitter">
+                        <a class="social-item__link" href="#" aria-label="Twitter">
+                            <svg class="social-item__icon" width="24" height="24">
+                                <use xlink:href="#twitter">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item social-item--facebook">
+                        <a class="social-item__link" href="#" aria-label="Facebook">
+                            <svg class="social-item__icon" width="24" height="24">
+                                <use xlink:href="#facebook">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item social-item--instagram">
+                        <a class="social-item__link" href="#" aria-label="Instagram">
+                            <svg class="social-item__icon" width="24" height="24">
+                                <use xlink:href="#instagram">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item social-item--youtube">
+                        <a class="social-item__link" href="#" aria-label="YouTube">
+                            <svg class="social-item__icon" width="24" height="24">
+                                <use xlink:href="#youtube">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item social-item--linkedin">
+                        <a class="social-item__link" href="https://twitter.com/{{ settings.utils.SocialMediaSettings.twitter_handle }}" aria-label="Linkedin">
+                            <svg class="social-item__icon" width="24" height="24">
+                                <use xlink:href="#linkedin">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        {# endif #}
+
+        <div class="footer__lower grid">
+
+            <nav class="footer__links" role="navigation" aria-label="Footer navigation">
                 {% footerlinks %}
-            </section>
+            </nav>
+
+            <div class="footer__credit" role="contentinfo">
+                <p class="footer__credit-item">Royal College of Art, Kensington Gore, London SW7 2EU</p>
+                <p class="footer__credit-item">RCA&trade; Royal College of Art&trade; are trademarks of the Royal College of Art </p>
+            </div>
+
         </div>
 
-        <div class="footer__credit" role="contentinfo">
-            {% if COPYRIGHT %}
-                <p>© {% now "Y" %} {{ COPYRIGHT }}</p>
-            {% endif %}
-            <div>Site by <a href="https://torchbox.com/">Torchbox</a></div>
-        </div>
     </div>
-</footer>
+
+</div>
