--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -19,6 +19,9 @@ $color--link-darkbg: $color--white;
 $color--link-lightbg-hover: $color--tertiary;
 $color--link-darkbg-hover: $color--tertiary;
 
+$color--grid-line-light: $color--white-12;
+$color--grid-line-dark: $color--black-80;
+
 // --------------------------------- Fonts --------------------------------------
 
 $font--primary: 'Benton Sans', 'BentonSans', 'Helvetica Neue', Arial, Helvetica, Sans-Serif;
