--- a/rca/static_src/sass/layout/_footer.scss
+++ b/rca/static_src/sass/layout/_footer.scss
@@ -1,59 +1,102 @@
 .footer {
-    padding: 20px 10px;
-    color: $color--secondary;
-    background-color: $color--primary;
+    padding-top: ($gutter * 2);
+    padding-bottom: $gutter;
+    background-color: $color--black;
+    color: $color--white;
 
-    &__inner {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-
-        @include media-query(tablet-portrait) {
-            align-items: flex-end;
-            flex-direction: row;
-            justify-content: space-between;
-        }
+    @include media-query(medium) {
+        padding-top: ($gutter * 5);
     }
 
-    &__nav-container {
-        width: 100%;
+    @include media-query(large) {
+        padding-top: ($gutter * 8);
+        padding-bottom: ($gutter * 5);
+    }
 
-        @include media-query(tablet-landscape) {
-            flex: 1;
-            width: auto;
+    &__upper {
+        align-items: end;
+    }
+
+    &__lower {
+        padding-top: ($gutter * 3);
+
+        @include media-query(medium) {
+            padding-top: ($gutter * 5.5);
         }
+
+    }
+
+    &__mid {
+        padding-top: ($gutter * 2.5);
+    }
+
+    &__logo {
+
+        @include media-query(large) {
+            grid-column-start: 2;
+        }
+
+    }
+
+    &__action {
+        grid-column-start: 2;
+
+        @include media-query(large) {
+            grid-column-start: 4;
+        }
+
     }
 
     &__social-links {
         display: flex;
-        justify-content: center;
-        margin-bottom: 10px;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        grid-column-start: 1;
+        grid-column-end: 3;
 
-        @include media-query(tablet-portrait) {
-            align-items: center;
+        @include media-query(medium) {
             justify-content: flex-start;
-            margin-bottom: 20px;
+            width: auto;
+        }
+
+        @include media-query(large) {
+            grid-column-start: 2;
         }
     }
 
-    &__heading {
-        display: none;
+    &__links {
 
-        @include media-query(tablet-portrait) {
-            display: block;
-            margin: 0 20px 0 0;
+        @include media-query(large) {
+            grid-column-start: 2;
+            grid-column-end: 5;
+            display: flex;
+            flex-direction: row;
         }
+
     }
 
     &__credit {
-        margin-top: 10px;
+        @include font-size(xxxs);
+        grid-column-start: 1;
+        grid-column-end: 3;
 
-        @include media-query(tablet-portrait) {
-            margin-top: 0;
+        @include media-query(medium) {
+            grid-column-start: 2;
+            grid-column-end: auto;
         }
 
-        a {
-            color: $color--secondary;
+        @include media-query(large) {
+            grid-column-start: 5;
         }
+    }
+
+    &__credit-item {
+
+        &:first-child {
+            padding-bottom: $gutter;
+            border-bottom: 1px solid $color--grid-line-light;
+        }
+
     }
 }
