initial work on menu toggle

--- a/rca/project_styleguide/templates/patterns/organisms/header/header.html
+++ b/rca/project_styleguide/templates/patterns/organisms/header/header.html
@@ -7,15 +7,10 @@
 
         <div class="header__navigation-toggle">
 
-            <div class="header__menu-toggle burger">
-                <button class="burger__toggle" data-mobile-menu-toggle aria-haspopup="true" aria-label="Mobile menu toggle">
-                    <span class="burger__line"></span>
-                    <span class="burger__line"></span>
-                    <span class="burger__line"></span>
-                    <span class="burger__line"></span>
-                </button>
-                <div class="burger__toggle-label">Menu</div>
-            </div>
+            <a href="#" class="header__menu-toggle burger" data-menu-toggle  aria-label="Menu menu toggle">
+                <svg class="burger__toggle-icon" width="36" height="12"><use xlink:href="#lines"></use></svg>
+                <span class="burger__toggle-label">Menu</span>
+            </a>
 
             <div class="header__search-toggle search-toggle">
                 <svg class="search-toggle__icon" width="24" height="23">
