--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -97,8 +97,8 @@ $z-index: (
     free4: 40,
     header: 50,
     free5: 60,
-    free6: 70,
-    free7: 80,
+    nav-overlay: 70,
+    nav: 80,
     gridlines: 90,
     modal: 100
 );
