--- a/rca/static_src/sass/base/_base.scss
+++ b/rca/static_src/sass/base/_base.scss
@@ -25,6 +25,26 @@ body {
     &.no-scroll {
         overflow-y: hidden;
     }
+
+    &::after {
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity $transition;
+    }
+
+    &.nav-open {
+        &::after {
+            @include z-index(nav-overlay);
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            background-color: $color--black-80;
+            opacity: 1;
+        }
+    }
 }
 
 // Prevent empty space below images appearing
