Removing components from WK that aren’t needed

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -19,7 +19,7 @@
 @import 'components/blockquote';
 @import 'components/body';
 @import 'components/burger';
-@import 'components/call-to-action';
+// @import 'components/call-to-action';
 @import 'components/cookie-message';
 @import 'components/card';
 @import 'components/carousel';
@@ -31,15 +31,13 @@
 @import 'components/link';
 @import 'components/logo';
 @import 'components/nav';
-@import 'components/progress-bar';
 @import 'components/responsive-object';
 @import 'components/rich-text';
 @import 'components/search-toggle';
-@import 'components/section';
-@import 'components/video-modal';
-@import 'components/wrapper';
+// @import 'components/section';
+@import 'components/slideshow';
+// @import 'components/video-modal';
 
 // Layout
 @import 'layout/footer';
 @import 'layout/header';
-@import 'layout/sidebar';
