get the menu toggle working

--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -48,9 +48,22 @@
                     {% include 'patterns/atoms/logo/logo.html' %}
                 </div>
                 <div class="header__inner">
-                    <a href="#" data-close-menu>
-                        <svg class="" width="14" height="14"><use xlink:href="#close"></use></svg>
-                    </a>
+                    <div class="header__navigation-toggle">
+                        <a href="#" class="header__menu-toggle burger" data-menu-toggle aria-label="Menu menu toggle">
+                            <svg class="burger__toggle-icon" width="36" height="12"><use xlink:href="#lines"></use></svg>
+                            <span class="burger__toggle-label">Menu</span>
+                        </a>
+
+                        <a href="#" class="header__search-toggle search-toggle" data-menu-toggle>
+                            <svg class="search-toggle__icon" width="24" height="23">
+                                <use xlink:href="#magnifying-glass" />
+                            </svg>
+                            <div class="search-toggle__label">Search</div>
+                        </a>
+                        <a class="header__menu-close" href="#" data-menu-toggle>
+                            <svg class="" width="14" height="14"><use xlink:href="#close"></use></svg>
+                        </a>
+                    </div>
                 </div>
             </section>
         </nav>
