--- a/rca/project_styleguide/templates/patterns/organisms/header/header.html
+++ b/rca/project_styleguide/templates/patterns/organisms/header/header.html
@@ -7,17 +7,17 @@
 
         <div class="header__navigation-toggle">
 
-            <a href="#" class="header__menu-toggle burger" data-menu-toggle  aria-label="Menu menu toggle">
+            <a href="#" class="header__menu-toggle burger" data-menu-toggle aria-label="Menu menu toggle">
                 <svg class="burger__toggle-icon" width="36" height="12"><use xlink:href="#lines"></use></svg>
                 <span class="burger__toggle-label">Menu</span>
             </a>
 
-            <div class="header__search-toggle search-toggle">
+            <a href="#" class="header__search-toggle search-toggle" data-menu-toggle>
                 <svg class="search-toggle__icon" width="24" height="23">
                     <use xlink:href="#magnifying-glass" />
                 </svg>
                 <div class="search-toggle__label">Search</div>
-            </div>
+            </a>
 
         </div>
 
