--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -52,7 +52,7 @@
                         {% include 'patterns/molecules/nav-toggles/nav-toggles.html' %}
 
                         <a class="header__menu-close" href="#" data-menu-toggle>
-                            <svg class="" width="14" height="14"><use xlink:href="#close"></use></svg>
+                            <svg width="14" height="14"><use xlink:href="#close"></use></svg>
                         </a>
                     </div>
                 </div>
