--- a/rca/project_styleguide/templates/patterns/molecules/nav-toggles/nav-toggles.html
+++ b/rca/project_styleguide/templates/patterns/molecules/nav-toggles/nav-toggles.html
@@ -1,9 +1,9 @@
-<a href="#" class="header__menu-toggle burger" data-menu-toggle aria-label="Menu menu toggle">
+<a href="#" class="header__menu-toggle burger" aria-label="Menu menu toggle" data-menu-toggle data-active="menu">
     <svg class="burger__toggle-icon" width="36" height="12"><use xlink:href="#lines"></use></svg>
     <span class="burger__toggle-label">Menu</span>
 </a>
 
-<a href="#" class="header__search-toggle search-toggle" data-menu-toggle>
+<a href="#" class="header__search-toggle search-toggle" aria-label="Search toggle" data-menu-toggle data-active="search">
     <svg class="search-toggle__icon" width="24" height="23">
         <use xlink:href="#magnifying-glass" />
     </svg>
