--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -35,6 +35,7 @@
 @import 'components/progress-bar';
 @import 'components/responsive-object';
 @import 'components/rich-text';
+@import 'components/search';
 @import 'components/search-toggle';
 @import 'components/section';
 @import 'components/social-item';
