--- a/rca/static_src/sass/components/_nav.scss
+++ b/rca/static_src/sass/components/_nav.scss
@@ -1,12 +1,24 @@
 .nav {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
+    // temp comment out
 
-    @include media-query(tablet-portrait) {
-        flex-direction: row;
+    // display: flex;
+    // align-items: center;
+    // flex-direction: column;
+    // width: 100%;
+    // height: 100%;
+
+    // @include media-query(tablet-portrait) {
+    //     flex-direction: row;
+    // }
+
+    display: none;
+
+    .menu-active & {
+        display: block;
+    }
+
+    p {
+        color: $color--white; // temp
     }
 
     &--primary {
