--- a/rca/static_src/sass/components/_app.scss
+++ b/rca/static_src/sass/components/_app.scss
@@ -67,6 +67,11 @@
         .nav-open & {
             pointer-events: all;
             transform: translate3d(0%, 0%, 0);
+            background: $color--black;
+
+            @include media-query(large) {
+                background: transparent;
+            }
         }
     }
 }
