--- a/rca/static_src/sass/components/_search-toggle.scss
+++ b/rca/static_src/sass/components/_search-toggle.scss
@@ -1,12 +1,25 @@
 .search-toggle {
     $root: &;
-    display: flex;
+    display: none;
     flex-direction: row;
     align-items: center;
+
+    @include media-query(medium) {
+        display: flex;
+    }
 
     &__label {
         @include font-size(xxxs);
         margin-left: ($gutter / 2);
+    }
+
+    .app__navigation & {
+        margin-top: $grid * 5;
+        display: flex;
+
+        @include media-query(medium) {
+            margin-top: 0;
+        }
     }
 
     .header--dark-bg & {
