--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -35,6 +35,7 @@
 @import 'components/rich-text';
 @import 'components/search-toggle';
 // @import 'components/section';
+@import 'components/slide';
 @import 'components/slideshow';
 // @import 'components/video-modal';
 
