--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -7,7 +7,9 @@ $color--light-grey: #797979;
 $color--dark-grey: #676767;
 
 $color--white-12: rgba(255, 255, 255, 0.12);
+$color--white-24: rgba(255, 255, 255, 0.24);
 $color--black-80: rgba(0, 0, 0, 0.8);
+$color--black-24: rgba(0, 0, 0, 0.24);
 
 $color--primary: $color--black;
 $color--secondary: $color--white;
@@ -18,6 +20,9 @@ $color--link-darkbg: $color--white;
 
 $color--link-lightbg-hover: $color--tertiary;
 $color--link-darkbg-hover: $color--tertiary;
+
+$color--scrollbar-darkbg-bg: $color--white-24;
+$color--scrollbar-lightbg-bg: $color--black-24;
 
 // --------------------------------- Fonts --------------------------------------
 
