initial work on show/hiding the sub menus

--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -122,6 +122,7 @@ $site-width: 1440px;
 // --------------------------------- Transitions --------------------------------------
 
 $transition: 0.25s ease-out;
+$cubic-transition: 250ms cubic-bezier(0.24, 0.26, 0.2, 1);
 
 // --------------------------------- Magic numbers --------------------------------------
 
