--- a/rca/static_src/sass/components/_nav.scss
+++ b/rca/static_src/sass/components/_nav.scss
@@ -1,11 +1,12 @@
 .nav {
     display: none;
+    margin-bottom: 1rem;
 
     .menu-active & {
         display: block;
     }
 
-    p {
+    a,p {
         color: $color--white; // temp
     }
 
@@ -22,23 +23,11 @@
     }
 
     &--subnav {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 10;
-        height: 100%;
-        padding-top: 20px;
-        background: $color--secondary;
-        transform: translate3d(100%, 0%, 0);
-        transition: transform 250ms cubic-bezier(0.24, 0.26, 0.2, 1) 0ms;
+        display: none;
 
+        &:hover,
         &.is-visible {
-            transform: translate3d(0%, 0%, 0);
-        }
-
-        @include media-query(tablet-portrait) {
-            // @todo - desktop dropdown styles
-            display: none;
+            display: block;
         }
     }
 
@@ -59,12 +48,8 @@
     }
 
     &__item {
-        width: 60%;
-        padding-bottom: 10px;
-        margin-bottom: 10px;
-        font-weight: $weight--bold;
+        margin: 1rem 0;
         text-align: center;
-        border-bottom: 1px solid rgba($color--black, 0.2);
 
         .nav--tertiary & {
             width: 100%;
@@ -124,6 +109,8 @@
 
         &--back {
             @include font-size(xs);
+            display: none;
+            color: white;
             text-transform: uppercase;
         }
 
@@ -155,9 +142,7 @@
     }
 
     &__link {
-        color: rgba($color--black, 0.7);
-        border-bottom: 1px solid transparent;
-        transition: color, border $transition;
+        color: $color--white;
 
         &:hover {
             cursor: pointer;
