Adding data point to capture left margin

--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -28,7 +28,7 @@
         {% block body_top %}{% endblock %}
 
         <div class="app__grid-lines" aria-hidden="true">
-            <div></div>
+            <div data-left-edge></div>
             <div></div>
             <div></div>
             <div></div>
