--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -104,6 +104,7 @@
             transform: translate3d(-100%, 0%, 0);
             transition: transform $cubic-transition;
             pointer-events: none;
+            padding-top: 0;
 
             &:hover,
             &.is-visible {
