Mask to hide slideshow captions

--- a/rca/static_src/sass/components/_slide.scss
+++ b/rca/static_src/sass/components/_slide.scss
@@ -8,6 +8,7 @@
     }
 
     &__meta {
+        @include z-index(base);
         position: relative;
         opacity: 0;
         transition: opacity $transition;
