--- a/rca/static_src/sass/components/_slideshow.scss
+++ b/rca/static_src/sass/components/_slideshow.scss
@@ -1,4 +1,5 @@
 .slideshow {
+    $meta-height: 60px;
     margin-bottom: ($gutter * 2);
 
     &__liveregion {
@@ -22,8 +23,8 @@
 
         @include media-query(large) {
             position: relative;
-            top: -60px;
-            margin-bottom: -60px;
+            top: -$meta-height;
+            margin-bottom: -$meta-height;
             pointer-events: none; // ensure links in overlaid content still work
         }
 
@@ -35,7 +36,21 @@
         pointer-events: auto; // ensure prev/next buttons are clickable
 
         @include media-query(large) {
+            @include z-index(overlap);
             display: block;
+            background-color: $color--white;
+
+            &::after {
+                @include z-index(under);
+                content: '';
+                position: absolute;
+                display: block;
+                background-color: $color--white;
+                right: -20%;
+                top: 0;
+                height: $meta-height;
+                width: 30%;
+            }
         }
     }
 
