--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -97,8 +97,9 @@ $breakpoints: (
 // --------------------------------- Z-indices --------------------------------------
 
 $z-index: (
-    free1: 10,
-    free2: 20,
+    under: -10,
+    base: 10,
+    overlap: 20,
     free3: 30,
     free4: 40,
     header: 50,
