--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -18,6 +18,7 @@
 @import 'components/button';
 @import 'components/blockquote';
 @import 'components/body';
+@import 'components/breadcrumb';
 @import 'components/burger';
 @import 'components/call-to-action';
 @import 'components/cookie-message';
@@ -32,6 +33,7 @@
 @import 'components/link';
 @import 'components/logo';
 @import 'components/nav';
+@import 'components/page';
 @import 'components/progress-bar';
 @import 'components/responsive-object';
 @import 'components/rich-text';
