--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -29,6 +29,7 @@
 @import 'components/form-item';
 @import 'components/grid';
 @import 'components/heading';
+@import 'components/hero';
 @import 'components/icon';
 @import 'components/link';
 @import 'components/logo';
