--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -95,21 +95,47 @@
         height: 900px;
         padding-top: ($gutter * 2);
 
-        &--level-zero {
+        &--menu-container {
+            position: relative;
+            padding-top: 0;
+        }
+
+        &--level-one {
             @include z-index(nav);
             position: relative;
         }
 
-        &--level-one {
-            transform: translate3d(-100%, 0%, 0);
+        &--level-two {
+            @include z-index(nav);
+            transform: translate3d(100%, 0, 0);
             transition: transform $cubic-transition;
             pointer-events: none;
             padding-top: 0;
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            display: none;
 
             &:hover,
             &.is-visible {
                 transform: translate3d(0, 0, 0);
                 pointer-events: all;
+            }
+
+            @include media-query(large) {
+                z-index: 50;
+                transform: translate3d(0, 0, 0);
+
+                &:hover,
+                &.is-visible {
+                    transform: translate3d(100%, 0, 0);
+                }
+            }
+
+            .menu-active & {
+                display: block;
             }
         }
     }
