--- a/rca/static_src/sass/components/_page.scss
+++ b/rca/static_src/sass/components/_page.scss
@@ -1,3 +1,16 @@
 .page {
 
+    &--overlap {
+
+        @include media-query(medium) {
+            position: relative;
+            top: -75px;
+            margin-bottom: -75px;
+        }
+
+        @include media-query(large) {
+            top: -100px;
+            margin-bottom: -100px;
+        }
+    }
 }
