h1 and introduction styles

--- a/rca/project_styleguide/templates/patterns/pages/programme-detail/programme-detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programme-detail/programme-detail.html
@@ -10,8 +10,8 @@
             <nav class="page__breadcrumb">
                 {% include "patterns/molecules/breadcrumb/breadcrumb.html" %}
             </nav>
-            <h1 class="page__header">{{ page.title }}</h1>
-            <p class="page__introduction">MA</p>
+            <h1 class="page__header heading heading--display-two">{{ page.title }}</h1>
+            <p class="page__introduction introduction">MA</p>
         </header>
         <div class="page__content">
             Rest of the page goes in here
