--- a/rca/static_src/sass/components/_page.scss
+++ b/rca/static_src/sass/components/_page.scss
@@ -13,4 +13,13 @@
             margin-bottom: -100px;
         }
     }
+
+    &__header {
+
+        @include media-query(large) {
+            grid-column: 2 / span 3;
+        }
+
+    }
+
 }
