--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -31,6 +31,7 @@
 @import 'components/heading';
 @import 'components/hero';
 @import 'components/icon';
+@import 'components/introduction';
 @import 'components/link';
 @import 'components/logo';
 @import 'components/nav';
