--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -29,6 +29,8 @@ $color--grid-line-light: $color--white-12;
 $color--grid-line-dark: $color--black-12;
 
 $color--meta: $color--light-grey;
+$color--grid-line-light: $color--white-12;
+$color--grid-line-dark: $color--black-80;
 
 // --------------------------------- Fonts --------------------------------------
 
