--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -71,8 +71,8 @@
 
         <!-- <section class="header__menus header__menus--mobile" data-mobile-menu> </section> -->
         <div class="app__search">
-            <form action="{% url 'search' %}" method="get" role="search" class="form form--header-search">
-                <input class="input" type="text" placeholder="Search…" name="query"{% if search_query %} value="{{ search_query }}{% endif %}">
+            <form action="https://www.rca.ac.uk/search" method="get" role="search" class="form form--header-search">
+                <input class="input" type="text" placeholder="Search…" name="q"{% if search_query %} value="{{ search_query }}{% endif %}">
                 <button class="button" type="submit">
                     <svg class="icon icon--magnifying-glass"><use xlink:href="#magnifying-glass"></use></svg>
                 </button>
