--- a/rca/project_styleguide/templates/patterns/pages/search/search.html
+++ b/rca/project_styleguide/templates/patterns/pages/search/search.html
@@ -9,8 +9,8 @@
 
     <h1>{% if search_query %}Search results for &ldquo;{{ search_query }}&rdquo;{% else %}Search{% endif %}</h1>
 
-    <form action="{% url 'search' %}" method="get" role="search">
-        <input type="text" placeholder="Search…" name="query"{% if search_query %} value="{{ search_query }}"{% endif %}>
+    <form action="https://www.rca.ac.uk/search" method="get" role="search">
+        <input type="text" placeholder="Search…" name="q"{% if search_query %} value="{{ search_query }}"{% endif %}>
         <input type="submit" value="Search">
     </form>
 
