Refactoring bg bg—light bg—dark etc

--- a/rca/static_src/sass/components/_breadcrumb.scss
+++ b/rca/static_src/sass/components/_breadcrumb.scss
@@ -18,4 +18,21 @@
             margin-right: ($gutter / 2);
         }
     }
+
+    .bg--dark & {
+
+        #{$root}__item-link {
+            color: $color--white;
+        }
+
+    }
+
+    .bg--light & {
+
+        #{$root}__item-link {
+            color: $color--black;
+        }
+
+    }
+
 }
