--- a/rca/static_src/sass/components/_slide.scss
+++ b/rca/static_src/sass/components/_slide.scss
@@ -66,4 +66,20 @@
 
     }
 
+    .bg--dark & {
+
+        #{$root}__author {
+            color: $color--white;
+        }
+
+    }
+
+    .bg--light & {
+
+        #{$root}__author {
+            color: $color--black;
+        }
+
+    }
+
 }
