--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -20,6 +20,7 @@
 @import 'components/body';
 @import 'components/breadcrumb';
 @import 'components/burger';
+@import 'components/bg';
 // @import 'components/call-to-action';
 @import 'components/cookie-message';
 @import 'components/card';
@@ -40,7 +41,7 @@
 @import 'components/rich-text';
 @import 'components/search';
 @import 'components/search-toggle';
-// @import 'components/section';
+@import 'components/section';
 @import 'components/slide';
 @import 'components/slideshow';
 @import 'components/social-item';
