--- a/rca/static_src/sass/components/_burger.scss
+++ b/rca/static_src/sass/components/_burger.scss
@@ -26,7 +26,7 @@
         stroke: $color--white;
     }
 
-    .header--dark-bg & {
+    .bg--dark & {
         #{$root}__line {
             background: $color--white;
         }
@@ -36,7 +36,7 @@
         }
     }
 
-    .header--light-bg & {
+    .bg--light & {
         #{$root}__line {
             background: $color--black;
         }
