Title area component

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -45,6 +45,7 @@
 @import 'components/slide';
 @import 'components/slideshow';
 @import 'components/social-item';
+@import 'components/title-area';
 // @import 'components/video-modal';
 
 // Layout
