--- a/rca/static_src/sass/components/_page.scss
+++ b/rca/static_src/sass/components/_page.scss
@@ -1,25 +1,69 @@
 .page {
+    $root: &;
+    $notch-medium-height: 75px;
+    $notch-large-height: 100px;
 
     &--overlap {
 
         @include media-query(medium) {
             position: relative;
-            top: -75px;
-            margin-bottom: -75px;
+            top: -$notch-medium-height;
+            margin-bottom: -$notch-medium-height;
         }
 
         @include media-query(large) {
-            top: -100px;
-            margin-bottom: -100px;
+            top: -$notch-large-height;
+            margin-bottom: -$notch-large-height;
         }
+
     }
 
-    &__header {
+    &__notch-block {
 
-        @include media-query(large) {
-            grid-column: 2 / span 3;
+        @include media-query(medium) {
+            position: relative;
+            grid-column: 1 / span 2;
+            height: $notch-medium-height;
         }
 
+        @include media-query(large) {
+            grid-column: 1 / span 4;
+            height: $notch-large-height;
+        }
+
+        &::before {
+
+            @include media-query(medium) {
+                position: absolute;
+                content: '';
+                display: block;
+                width: 100%;
+                left: 0;
+                transform: translate3d(-90%, 0%, 0); // if 100 someones shows a subpixel
+                height: $notch-medium-height;
+            }
+
+            @include media-query(large) {
+                height: $notch-large-height;
+            }
+
+        }
+
+        &.bg--dark {
+
+            &::before {
+                background-color: $color--black;
+            }
+
+        }
+
+        &.bg--light {
+
+            &::before {
+                background-color: $color--white;
+            }
+
+        }
     }
 
 }
