--- a/rca/static_src/sass/components/_breadcrumb.scss
+++ b/rca/static_src/sass/components/_breadcrumb.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     grid-column: span 2;
+    margin-bottom: $gutter;
 
     &__item {
         @include font-size(xxs);
